macros/tests/ui/declare/dup_listeners_depends_fail.stderr
error: Object can't be depends which have many instance.
  --> tests/ui/declare/dup_listeners_depends_fail.rs:13:8
   |
13 |     on sized_box.tap {
   |        ^^^^^^^^^^^^^
   |
help: declare at here.
  --> tests/ui/declare/dup_listeners_depends_fail.rs:8:7
   |
8  |       tap: |_| {}
   |       ^^^
...
11 |       tap: |_| {}
   |       ^^^
